Farm Location as string instead of object
