# src/models/Farms.js
@@ -6,10 +6,7 @@ const { Schema } = mongoose;
 const farmSchema = new mongoose.Schema({
   user: { type: Schema.Types.ObjectId, ref: 'User', required: true },  // Reference to the user who created it
   name: { type: String, required: true },
-  location: {
-    type: { type: String, default: 'Point' },  // GeoJSON format
-    coordinates: { type: [Number], required: true },  // [longitude, latitude]
-  },
+  location: { type: String, required: true },
   additionalInfo: {
     info1: String,
     info2: String,
